--- a/src/pages/landing-page/index.css
+++ b/src/pages/landing-page/index.css
@@ -1,4 +1,12 @@
-.calc-input {
-  width: 500px;
-  height: 200px;
+.landing-page {
+  min-height: 100vh;
+  /* background-color: black; */
+}
+
+.calc-frame {
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+  align-items: center;
+  justify-content: center;
 }
