--- a/src/pages/landing-page/index.css
+++ b/src/pages/landing-page/index.css
@@ -1,7 +1,19 @@
 .landing-page {
+  -webkit-transition-property: color, background-color;
+  -webkit-transition-duration: 1s;
+  -webkit-transition-timing-function: ease-in-out;
+  -moz-transition-property: color, background-color;
+  -moz-transition-duration: 1s;
+  -moz-transition-timing-function: ease-in-out;
+  -o-transition-property: color, background-color;
+  -o-transition-duration: 1s;
+  -o-transition-timing-function: ease-in-out;
   transition-property: color, background-color;
   transition-duration: 1s;
   transition-timing-function: ease-in-out;
+
+
+
   min-height: 100vh;
   background-color: var(--background);
 }
@@ -22,7 +34,7 @@
   border: none;
 }
 
-.mode-button:focus {
+button:focus {
   outline: none;
 }
 
@@ -45,6 +57,8 @@
   --submit-button: #A58EBC;
   --text-input: white;
   --text-input-font: black;
+  --nav-selected-button: rgb(249, 193, 193);
+  --nav-unselected-button: rgb(213, 197, 197);
 }
 
 .dark-mode {
@@ -55,4 +69,6 @@
   --submit-button: #e16038;
   --text-input: #292929;
   --text-input-font: white;
+  --nav-selected-button: rgb(236, 160, 160);
+  --nav-unselected-button: rgb(173, 118, 118);
 }
