improving error handlers and removing double tap zoom on mobile

--- a/src/pages/landing-page/index.css
+++ b/src/pages/landing-page/index.css
@@ -13,7 +13,7 @@
   transition-timing-function: ease-in-out;
 
 
-
+  touch-action: manipulation;
   min-height: 100vh;
   background-color: var(--background);
 }
