--- a/src/components/calculator/index.css
+++ b/src/components/calculator/index.css
@@ -33,8 +33,8 @@
   opacity: 0;
   position: absolute;
   left: 50%;
-  top: -50px;
-  height: 25px;
+  top: -100px;
+  height: fit-content;
   transform: translateX(-50%);
   border: 3px solid #FF869C;
   border-radius: 5px;
