--- a/src/components/calculator/index.css
+++ b/src/components/calculator/index.css
@@ -68,10 +68,15 @@ table.calc-input-board {
 
 .result-type-list span {
   width: 100%;
+  height: 40px;
   margin: 2px;
   background-color: var(--operation-button);
-  border-radius: 20px;
+  border-radius: 6px;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
 }
 
 .result-type-list input {
