fixing result button

--- a/src/pages/landing-page/index.css
+++ b/src/pages/landing-page/index.css
@@ -96,5 +96,7 @@ button:focus {
   --nav-selected-button: #eca0a0;
   --nav-unselected-button: #ad7676;
   --page-separator: #fffff1;
+  --result-type-button: #937CE6;
+
 
 }
