--- a/src/pages/landing-page/index.css
+++ b/src/pages/landing-page/index.css
@@ -83,6 +83,8 @@ button:focus {
   --nav-selected-button: #f9c1c1;
   --nav-unselected-button: #d5c5c5;
   --page-separator: #222121;
+  --result-type-button: #937CE6;
+  --selected-result-type-button: #6344D4;
 }
 
 .dark-mode {
